# firmware

./: .buckconfig  .buckleconfig.toml  .clang-format  .clangd  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  BUCK  Cargo.toml  ENV_SETUP.md  ENV_SETUP.txt  README.md  SConstruct  buildroot.sh  docker-compose.yml  pixi.toml  pyproject.toml  requirements.txt  uncrustify.cfg  veh.dbc  yes  yes.pub
.github/: pull_request_template.md
.github/workflows/: artifacts.yml  build.yml  cfr24.yml  formatting.yml  release.yml  standard_checks.yml
artifacts/dbc/: veh-1-edited.dbc
buck/constraints/: BUCK
buck/toolchains/: BUCK
buck2/constraints/: BUCK
buck2/toolchains/: BUCK
buck2/tools/: comp_db.bxl
cfr-linux/: cfr.yml  yocto-cfr.yml
components/aero_sensors/: README.md  REQUIREMENTS.md  SConscript
components/bms_boss/: BUCK  FeatureDefs.yaml  FeatureSels.yaml  SConscript  variants.yaml
components/bms_worker/: BUCK  FeatureDefs.yaml  FeatureSels.yaml  SConscript  defs.bzl  variants.yaml
components/bootloaders/: SConscript
components/heartbeat/: SConscript  STM32F103C8.ld
components/reflow_oven/: SConscript
components/safety_board/: SConscript
components/shared/: BUCK
components/steering_wheel/: BUCK  README.md  SConscript  build_rtos.py  compile_commands.json  doxygen_stw.conf  platformio.ini  pyocd.yaml  steering_wheel.ioc  stm32pio.ini  upload.py
components/stw_switch/: FeatureSels.yaml  SConscript  variants.yaml
components/sws/: BUCK  FeatureDefs.yaml  FeatureSels.yaml  variants.yaml
components/vc/: SConscript
components/vehicle_platform/: defs.bzl  platforms.bzl
conUDS/: Cargo.toml
conUDS/assets/: nodes.yml
conUDS/src/: arguments.rs  config.rs  lib.rs  main.rs
conUDS/src/modules/: canio.rs  mod.rs  uds.rs
constraints/: BUCK
containers/buck2/: Dockerfile  entrypoint.sh
conuds/: __main__.py  conuds.py  timer.py
dev_container/: Dockerfile  compile_docker.sh
docs/: GUIDELINES.md  git_manipulations.rtf  git_manipulations.txt  guidelines.md
docs/components/: COMPONENTS.md
docs/env/: DOCUMENTING.md  ENV.md
drive-stack/: BUCK  defs.bzl
drive-stack/can-bridge/: BUCK  Cargo.toml  can-bridge-body.service  can-bridge-veh.service  can-bridge.service
drive-stack/can_bridge/: BUCK
drive-stack/car-dashboard/: BUCK  Cargo.toml  dashboard.service
drive-stack/car-dashboard/src/: lib.rs  main.rs  views.rs
drive-stack/car-dashboard/static/: signal-cache-worker.js
drive-stack/car-dashboard/templates/: base.html  controller.html  error.html  home.html  signals.html
drive-stack/carputer/: BUCK  bootstrap-carputer.service  bootstrap-carputer.sh  bootstrap-startup.sh  defs.bzl  ota-agent-drive-stack-activate.sh  (+1 more)
drive-stack/conUDS/: BUCK  Cargo.toml  README.md  defs.bzl  nodes.yml  routines.yml
drive-stack/conUDS/.github/workflows/: release.yml
drive-stack/conUDS/conUDS/: Cargo.toml
drive-stack/conUDS/src/: arguments.rs  config.rs  lib.rs  main.rs
drive-stack/conUDS/src/modules/: canio.rs  uds.rs
drive-stack/ota-agent/: BUCK  Cargo.toml  defs.bzl  discovery.yaml  ota-agent.service  ota-agent.toml
drive-stack/ota-agent/src/: main.rs
embedded/: defs.bzl
embedded/libs/: BUCK  (+1 more)
network/: BUCK  SConscript  requirements.txt
network/NetworkGen/: NetworkGen.py  defs.bzl  pyproject.toml
network/NetworkGen/classes/: Can.py  Types.py
network/NetworkGen/dbc_template/: dbc_functions.mako  dbc_header.dbc  template.dbc.mako
network/NetworkGen/templates/: MessagePack_generated.c.mako  MessageUnpack_generated.c.mako  MessageUnpack_generated.h.mako  NetworkDefines_generated.h.mako  SigRx.h.mako  SigTx.c.mako  TemporaryStubbing.h.mako  dbc_functions.mako  message_pack.mako  message_unpack.mako  template.dbc.mako
rustc/: .buckconfig  .gitattributes  .gitignore  .ignore  .taplo.toml  BUCK  Cargo.toml  PACKAGE  README.md  bootstrap.toml  defs.bzl  reindeer.toml  submodule_init.sh
rustc/.github/actions/checkout/: action.yml
rustc/.github/workflows/: build.yml  lint.yml
rustc/allocator/: BUCK  allocator.rs  std_alloc.rs
rustc/constraints/: BUCK  defs.bzl
rustc/crates.io/: BUCK  crate_download.bzl  rule.bzl
rustc/fixups/basic-toml/: fixups.toml
rustc/fixups/blake3/: fixups.toml
rustc/fixups/clippy/: fixups.toml
rustc/fixups/clippy_config/: fixups.toml
rustc/fixups/clippy_lints/: fixups.toml
rustc/fixups/clippy_utils/: fixups.toml
rustc/fixups/compiler_builtins/: fixups.toml
rustc/fixups/core/: fixups.toml
rustc/fixups/declare_clippy_lint/: fixups.toml
rustc/fixups/hashbrown/: fixups.toml
rustc/fixups/mime_guess/: fixups.toml
rustc/fixups/objc2/: fixups.toml
rustc/fixups/panic_abort/: fixups.toml
rustc/fixups/psm/: fixups.toml
rustc/fixups/rustc-main/: fixups.toml
rustc/fixups/rustc_baked_icu_data/: fixups.toml
rustc/fixups/rustc_codegen_llvm/: fixups.toml
rustc/fixups/rustc_errors/: fixups.toml
rustc/fixups/rustc_interface/: fixups.toml
rustc/fixups/rustc_llvm/: BUCK  defs.bzl  fixups.toml
rustc/fixups/rustc_proc_macro/: fixups.toml
rustc/fixups/rustc_target/: fixups.toml
rustc/fixups/rustdoc/: fixups.toml
rustc/fixups/rustdoc-tool/: fixups.toml
rustc/fixups/stacker/: fixups.toml
rustc/fixups/std/: fixups.toml
rustc/fixups/thiserror/: fixups.toml
rustc/fixups/thiserror-impl/: fixups.toml
rustc/fixups/tracing/: fixups.toml
rustc/fixups/winapi/: fixups.toml
rustc/fixups/winapi-x86_64-pc-windows-gnu/: fixups.toml
rustc/keep/: .gitignore  BUCK  defs.bzl
rustc/remote_execution/: Dockerfile  README.md  config.bzl
rustc/scripts/: check.bxl  download.bxl
rustc/stage0/: BUCK  defs.bzl  exec.py  frob.py
rustc/stage1/: BUCK  defs.bzl
rustc/stage2/: BUCK
rustc/toolchains/: BUCK  cxx.bzl  python.bzl  rust.bzl
rustc/toolchains/cxx/: BUCK
rustc/toolchains/rust/: BUCK  defs.bzl
site_scons/: bms.py  candapter_driver.py  candapter_driver_serial.py  chips.yaml  components.yaml  mc_flash.py  platforms.yaml
toolchains/: BUCK
tools/: defs.bzl
tools/log-processor/: BUCK  Cargo.toml  log-processor.service
tools/log-processor/src/: lib.rs  main.rs
(+1211 files in other folders)
