[workspace]
resolver = "2"
members = [
  "drive-stack/ota-agent",
  "drive-stack/conUDS",
  "drive-stack/car-dashboard",
  "drive-stack/can-bridge",
  "drive-stack/net-detec",
  "tools/log-processor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.80"
argh = "0.1.12"
askama = "0.12"
axum = "0.7"
automotive_diag = { version = "=0.1.22", features = [
  "display",
  "std",
  "with-uds",
], default-features = false }
bytes = "1"
can-dbc = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
crc = "3.2.1"
ecu_diagnostics = "0.99"
env_logger = "0.11"
futures = "0.3.30"
hex = "0.4"
hostname = "0.3"
if_addrs = { package = "if-addrs", version = "0.14" }
indicatif = "0.17.8"
libc = "0.2.175"
log = { version = "0.4.21", features = ["std"] }
mdns-sd = "0.15.1"
net_detec = { package = "net-detec", path = "drive-stack/net-detec" }
ratatui = "0.29.0"
reqwest = { version = "0.12", default-features = false, features = [
  "multipart",
  "json",
  "stream",
] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_derive = { version = "=1.0.219" }
serde_json = "=1.0.143"
serde_yaml = { version = "=0.9.34" }
sha2 = "0.10"
simplelog = "0.12.2"
socketcan = "=3.5.0"
thiserror = "1.0"
tokio = { version = "1.36.0", features = [
  "full",
  "macros",
  "tokio-macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
