[project]
name = "firmware"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "black==24.4.2",
    "click==8.1.7",
    "Mako==1.3.5",
    "MarkupSafe==2.1.5",
    "mypy-extensions==1.0.0",
    "oyaml==1.0",
    "packaging==24.0",
    "pathspec==0.12.1",
    "platformdirs==4.2.2",
    "PyYAML==6.0.1",
    "regex==2024.5.15",
    "SCons==4.7.0",
    "tomli==2.0.1",
    "typing_extensions==4.11.0",
]

[tool.pyright]
allowedUntypedLibraries = ["SCons"]
reportAny = false
reportExplicitAny = false
