[package]
name = "conuds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
automotive_diag = { version = "0.1.6", features = ["display", "std", "with-uds"], default-features = false }
ecu_diagnostics = "0.95.6"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
tokio = { version = "1.36.0", features = ["macros", "tokio-macros", "rt", "rt-multi-thread", "time", "sync"] }
