[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dashboard"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
conUDS = { path = "../conUDS" }
env_logger = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
warp = "0.3"
