[package]
name = "conUDS"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "conUDS"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
automotive_diag = { workspace = true }
crc = { workspace = true }
ecu_diagnostics = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
tokio = { workspace = true }
