# Cargo.toml
[package]
name = "ota-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
net_detec = { workspace = true }
if_addrs = { workspace = true }
hostname = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
indicatif = { workspace = true }
