[project]
name = "yamcan"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "black==21.12b0",
    "click==8.0.3",
    "Mako==1.1.6",
    "MarkupSafe==2.0.1",
    "mypy-extensions==0.4.3",
    "pathspec==0.9.0",
    "platformdirs==2.4.0",
    "PyYAML==6.0.1",
    "tomli==1.2.2",
    "typing_extensions==4.0.1",
    "regex==2024.5.15",
    "schema==0.7.7",
]

[tool.pyright]
reportUnusedCallResult = false
