[package]
name = "log-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
flate2 = "1"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "http1", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
