[package]
name = "conUDS"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "conUDS"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
argh = "0.1.12"
automotive_diag = { version = "0.1.6", features = ["display", "std", "with-uds"], default-features = false }
crc = "3.2.1"
ecu_diagnostics = "0.95.6"
futures = "0.3.30"
indicatif = "0.17.8"
log = { version = "0.4.21", features = ["std"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
tokio = { version = "1.36.0", features = ["macros", "tokio-macros", "rt", "rt-multi-thread", "time", "sync"] }
